--- a/app/Components/Controls/Stalking/Flag.latte
+++ b/app/Components/Controls/Stalking/Flag.latte
@@ -1,64 +1,56 @@
-<div class="card mb-3 border-primary">
-    <h4 class="card-header bg-primary text-white">{_('Flags')}</h4>
-    {if $mode == \FKSDB\Components\Controls\Stalking\StalkingComponent::PERMISSION_FULL || $mode == \FKSDB\Components\Controls\Stalking\StalkingComponent::PERMISSION_RESTRICT }
-
-        {if count($flags)}
-            {foreach $flags as $flag}
-                <h3 class="card-header">{$flag->name}</h3>
-                <ul class="list-group list-group-flush">
+{layout './@layout.latte'}
+{block content}
+    {if count($flags)}
+        {foreach $flags as $flag}
+            <h3 class="card-header">{$flag->name}</h3>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                    <div class="row">
+                        <span class="col-5">{_'Value'}</span>
+                        <div class="col-7">
+                            {if $flag->value == 1}
+                                <span class="badge badge-success">1</span>
+                            {elseif $flag->value == 0}
+                                <span class="badge badge-danger">0</span>
+                            {else}
+                                <span class="badge badge-warning">{$flag->value}</span>
+                            {/if}
+                        </div>
+                    </div>
+                </li>
+                {if $flag->type == 'contest' || $flag->type == 'contest_year'}
                     <li class="list-group-item">
                         <div class="row">
-                            <span class="col-5">{_('Value')}</span>
+                            <span class="col-5">{_'Contest'}</span>
                             <div class="col-7">
-                                {if $flag->value == 1}
-                                    <span class="badge badge-success">1</span>
-                                {elseif $flag->value == 0}
-                                    <span class="badge badge-danger">0</span>
-                                {else}
-                                    <span class="badge badge-warning">{$flag->value}</span>
-                                {/if}
+                                {control contestBadge, $org->contest_id}
                             </div>
                         </div>
                     </li>
-                    {if $flag->type == 'contest' || $flag->type == 'contest_year'}
-                        <li class="list-group-item">
-                            <div class="row">
-                                <span class="col-5">{_('Contest')}</span>
-                                <div class="col-7">
-                                    {control contestBadge, $org->contest_id}
-                                </div>
-                            </div>
-                        </li>
-                    {/if}
-                    {if $flag->type == 'ac_year' || $flag->type == 'contest_year'}
-                        <li class="list-group-item">
-                            <div class="row">
-                                <span class="col-5">{_('Year')}</span>
-                                <div class="col-7">
-                                    {$flag->ac_year}
-                                </div>
-                            </div>
-                        </li>
-                    {/if}
+                {/if}
+                {if $flag->type == 'ac_year' || $flag->type == 'contest_year'}
                     <li class="list-group-item">
                         <div class="row">
-                            <span class="col-5">{_('Modified')}</span>
+                            <span class="col-5">{_'Year'}</span>
                             <div class="col-7">
-                                {$flag->modified}
+                                {$flag->ac_year}
                             </div>
                         </div>
                     </li>
-                </ul>
-            {/foreach}
-        {else}
-            <div class="card-body">
-                <span class="badge-warning badge">{_('No records')}</span>
-            </div>
-        {/if}
+                {/if}
+                <li class="list-group-item">
+                    <div class="row">
+                        <span class="col-5">{_'Modified'}</span>
+                        <div class="col-7">
+                            {$flag->modified}
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        {/foreach}
     {else}
         <div class="card-body">
-            {control permissionDenied}
+            {control noRecords}
         </div>
     {/if}
-
-</div>
+{/block}
