--- a/app/Components/Controls/Stalking/BaseInfo.latte
+++ b/app/Components/Controls/Stalking/BaseInfo.latte
@@ -1,10 +1,10 @@
 <div class="card mb-3 border-primary">
-    <h4 class="card-header bg-primary text-white">{_('Base info')}</h4>
+    <h4 class="card-header bg-primary text-white">{_'Base info'}</h4>
     {if $mode == \FKSDB\Components\Controls\Stalking\StalkingComponent::PERMISSION_FULL || $mode == \FKSDB\Components\Controls\Stalking\StalkingComponent::PERMISSION_RESTRICT }
         <ul class="list-group list-group-flush">
             <li class="list-group-item">
                 <div class="row">
-                    <span class="col-5">{_('person_id')}</span>
+                    <span class="col-5">{_'Person Id'}</span>
                     <div class="col-7">
                         {$info->person_id}
                     </div>
@@ -13,14 +13,14 @@
 
             <li class="list-group-item">
                 <div class="row">
-                    <span class="col-5">{_('Born')}</span>
+                    <span class="col-5">{_'Born'}</span>
                     <div class="col-7">
                         {if $mode !== \FKSDB\Components\Controls\Stalking\StalkingComponent::PERMISSION_FULL}
                             {control permissionDenied}
                         {elseif (!is_null($info->born))}
-                            {$info->born->__toString()}
+                            {$info->born->format('d. m. Y')}
                         {else}
-                            <span class="badge badge-warning">{_('not set')}</span>
+                            {control notSet}
                         {/if}
                     </div>
                 </div>
@@ -28,28 +28,28 @@
 
             <li class="list-group-item">
                 <div class="row">
-                    <span class="col-5">{_('Born Id')}</span>
+                    <span class="col-5">{_'Born Id'}</span>
                     <div class="col-7">
                         {if $mode !== \FKSDB\Components\Controls\Stalking\StalkingComponent::PERMISSION_FULL}
                             {control permissionDenied}
                         {elseif (!is_null($info->born_id))}
                             {$info->born_id}
                         {else}
-                            <span class="badge badge-warning">{_('not set')}</span>
+                            {control notSet}
                         {/if}
                     </div>
                 </div>
             </li>
             <li class="list-group-item">
                 <div class="row">
-                    <span class="col-5">{_('Birthplace')}</span>
+                    <span class="col-5">{_'Birthplace'}</span>
                     <div class="col-7">
                         {if $mode !== \FKSDB\Components\Controls\Stalking\StalkingComponent::PERMISSION_FULL}
                             {control permissionDenied}
                         {elseif (!is_null($info->birthplace))}
                             {$info->birthplace}
                         {else}
-                            <span class="badge badge-warning">{_('not set')}</span>
+                            {control notSet}
                         {/if}
                     </div>
                 </div>
@@ -57,14 +57,14 @@
 
             <li class="list-group-item">
                 <div class="row">
-                    <span class="col-5">{_('Id number')}</span>
+                    <span class="col-5">{_'Id number'}</span>
                     <div class="col-7">
                         {if $mode !== \FKSDB\Components\Controls\Stalking\StalkingComponent::PERMISSION_FULL}
                             {control permissionDenied}
                         {elseif (!is_null($info->id_number))}
                             {$info->id_number}
                         {else}
-                            <span class="badge badge-warning">{_('not set')}</span>
+                            {control notSet}
                         {/if}
                     </div>
                 </div>
@@ -72,14 +72,14 @@
 
             <li class="list-group-item">
                 <div class="row">
-                    <span class="col-5">{_('Employer')}</span>
+                    <span class="col-5">{_'Employer'}</span>
                     <div class="col-7">
                         {if $mode !== \FKSDB\Components\Controls\Stalking\StalkingComponent::PERMISSION_FULL}
                             {control permissionDenied}
                         {elseif (!is_null($info->employer))}
                             {$info->employer}
                         {else}
-                            <span class="badge badge-warning">{_('not set')}</span>
+                            {control notSet}
                         {/if}
                     </div>
                 </div>
@@ -87,14 +87,14 @@
 
             <li class="list-group-item">
                 <div class="row">
-                    <span class="col-5">{_('Health insurance')}</span>
+                    <span class="col-5">{_'Health insurance'}</span>
                     <div class="col-7">
                         {if $mode !== \FKSDB\Components\Controls\Stalking\StalkingComponent::PERMISSION_FULL}
                             {control permissionDenied}
                         {elseif (!is_null($info->health_insurance))}
                             {$info->health_insurance}
                         {else}
-                            <span class="badge badge-warning">{_('not set')}</span>
+                            {control notSet}
                         {/if}
                     </div>
                 </div>
@@ -102,14 +102,14 @@
 
             <li class="list-group-item">
                 <div class="row">
-                    <span class="col-5">{_('Citizenship')}</span>
+                    <span class="col-5">{_'Citizenship'}</span>
                     <div class="col-7">
                         {if $mode !== \FKSDB\Components\Controls\Stalking\StalkingComponent::PERMISSION_FULL}
                             {control permissionDenied}
                         {elseif (!is_null($info->citizenship))}
                             {$info->citizenship}
                         {else}
-                            <span class="badge badge-warning">{_('not set')}</span>
+                            {control notSet}
                         {/if}
                     </div>
                 </div>
@@ -117,12 +117,12 @@
 
             <li class="list-group-item">
                 <div class="row">
-                    <span class="col-5">{_('UK login')}</span>
+                    <span class="col-5">{_'UK login'}</span>
                     <div class="col-7">
                         {if (!is_null($info->uk_login))}
                             {$info->uk_login}
                         {else}
-                            <span class="badge badge-warning">{_('not set')}</span>
+                            {control notSet}
                         {/if}
                     </div>
                 </div>
@@ -130,12 +130,12 @@
             <li class="list-group-item">
 
                 <div class="row">
-                    <span class="col-5">{_('Bank account')}</span>
+                    <span class="col-5">{_'Bank account'}</span>
                     <div class="col-7">
                         {if (!is_null($info->account))}
                             {$info->account}
                         {else}
-                            <span class="badge badge-warning">{_('not set')}</span>
+                            {control notSet}
                         {/if}
                     </div>
                 </div>
@@ -143,12 +143,12 @@
 
             <li class="list-group-item">
                 <div class="row">
-                    <span class="col-5">{_('Career')}</span>
+                    <span class="col-5">{_'Career'}</span>
                     <div class="col-7">
                         {if (!is_null($info->career))}
                             {$info->career}
                         {else}
-                            <span class="badge badge-warning">{_('not set')}</span>
+                            {control notSet}
                         {/if}
                     </div>
                 </div>
@@ -156,12 +156,12 @@
 
             <li class="list-group-item">
                 <div class="row">
-                    <span class="col-5">{_('Homepage')}</span>
+                    <span class="col-5">{_'Homepage'}</span>
                     <div class="col-7">
                         {if (!is_null($info->homepage))}
                             <a href="{$info->homepage}">{$info->homepage}</a>
                         {else}
-                            <span class="badge badge-warning">{_('not set')}</span>
+                            {control notSet}
                         {/if}
                     </div>
                 </div>
@@ -169,12 +169,12 @@
 
             <li class="list-group-item">
                 <div class="row">
-                    <span class="col-5">{_('Im')}</span>
+                    <span class="col-5">{_'Im'}</span>
                     <div class="col-7">
                         {if (!is_null($info->im))}
                             {$info->im}
                         {else}
-                            <span class="badge badge-warning">{_('not set')}</span>
+                            {control notSet}
                         {/if}
                     </div>
                 </div>
@@ -182,12 +182,12 @@
 
             <li class="list-group-item">
                 <div class="row">
-                    <span class="col-5">{_('Linkedin id')}</span>
+                    <span class="col-5">{_'Linkedin id'}</span>
                     <div class="col-7">
                         {if (!is_null($info->linkedin_id))}
                             {$info->linkedin_id}
                         {else}
-                            <span class="badge badge-warning">{_('not set')}</span>
+                            {control notSet}
                         {/if}
                     </div>
                 </div>
@@ -195,12 +195,12 @@
 
             <li class="list-group-item">
                 <div class="row">
-                    <span class="col-5">{_('Origin')}</span>
+                    <span class="col-5">{_'Origin'}</span>
                     <div class="col-7">
                         {if (!is_null($info->origin))}
                             {$info->origin}
                         {else}
-                            <span class="badge badge-warning">{_('not set')}</span>
+                            {control notSet}
                         {/if}
                     </div>
                 </div>
@@ -208,12 +208,12 @@
 
             <li class="list-group-item">
                 <div class="row">
-                    <span class="col-5">{_('Note')}</span>
+                    <span class="col-5">{_'Note'}</span>
                     <div class="col-7">
                         {if (!is_null($info->note))}
                             {$info->note}
                         {else}
-                            <span class="badge badge-warning">{_('not set')}</span>
+                            {control notSet}
                         {/if}
                     </div>
                 </div>
@@ -230,29 +230,29 @@
 
 {* extends table person *}
 <div class="card mb-3 border-primary">
-    <h4 class="card-header bg-primary text-white">{_('Academic degree')}</h4>
+    <h4 class="card-header bg-primary text-white">{_'Academic degree'}</h4>
         <ul class="list-group list-group-flush">
 
             <li class="list-group-item">
                 <div class="row">
-                    <span class="col-5">{_('Academic degree prefix')}</span>
+                    <span class="col-5">{_'Academic degree prefix'}</span>
                     <div class="col-7">
                         {if (!is_null($info->academic_degree_prefix))}
                             {$info->academic_degree_prefix}
                         {else}
-                            <span class="badge badge-warning">{_('not set')}</span>
+                            {control notSet}
                         {/if}
                     </div>
                 </div>
             </li>
             <li class="list-group-item">
                 <div class="row">
-                    <span class="col-5">{_('Academic degree suffix')}</span>
+                    <span class="col-5">{_'Academic degree suffix'}</span>
                     <div class="col-7">
                         {if (!is_null($info->academic_degree_suffix))}
                             {$info->academic_degree_suffix}
                         {else}
-                            <span class="badge badge-warning">{_('not set')}</span>
+                            {control notSet}
                         {/if}
                     </div>
                 </div>
@@ -263,17 +263,17 @@
 
 {* # contact info *}
 <div class="card mb-3 border-primary">
-    <h4 class="card-header bg-primary text-white">{_('Contant info')}</h4>
+    <h4 class="card-header bg-primary text-white">{_'Contant info'}</h4>
     {if $mode == \FKSDB\Components\Controls\Stalking\StalkingComponent::PERMISSION_FULL || $mode == \FKSDB\Components\Controls\Stalking\StalkingComponent::PERMISSION_RESTRICT }
 
         <ul class="list-group list-group-flush">
             <li class="list-group-item">
                 <div class="row">
-                    <span class="col-5">{_('Email')}</span>
+                    <span class="col-5">{_'Email'}</span>
                     <div class="col-7">
 
                         {if (is_null($info->email))}
-                            <span class="badge badge-warning">{_('not set')}</span>
+                            {control notSet}
                         {else}
                             {$info->email}
                         {/if}
@@ -283,42 +283,42 @@
             </li>
             <li class="list-group-item">
                 <div class="row">
-                    <span class="col-5">{_('Phone')}</span>
+                    <span class="col-5">{_'Phone'}</span>
                     <div class="col-7">
                         {if $mode !== \FKSDB\Components\Controls\Stalking\StalkingComponent::PERMISSION_FULL}
                             {control permissionDenied}
                         {elseif (!is_null($info->phone))}
                             {$info->phone}
                         {else}
-                            <span class="badge badge-warning">{_('not set')}</span>
+                            {control notSet}
                         {/if}
                     </div>
                 </div>
             </li>
             <li class="list-group-item">
                 <div class="row">
-                    <span class="col-5">{_('Phone parent mum')}</span>
+                    <span class="col-5">{_'Phone parent mum'}</span>
                     <div class="col-7">
                         {if $mode !== \FKSDB\Components\Controls\Stalking\StalkingComponent::PERMISSION_FULL}
                             {control permissionDenied}
                         {elseif (!is_null($info->phone_parent_m))}
                             {$info->phone_parent_m}
                         {else}
-                            <span class="badge badge-warning">{_('not set')}</span>
+                            {control notSet}
                         {/if}
                     </div>
                 </div>
             </li>
             <li class="list-group-item">
                 <div class="row">
-                    <span class="col-5">{_('Phone parent dad')}</span>
+                    <span class="col-5">{_'Phone parent dad'}</span>
                     <div class="col-7">
                         {if $mode !== \FKSDB\Components\Controls\Stalking\StalkingComponent::PERMISSION_FULL}
                             {control permissionDenied}
                         {elseif (!is_null($info->phone_parent_d))}
                             {$info->phone_parent_d}
                         {else}
-                            <span class="badge badge-warning">{_('not set')}</span>
+                            {control notSet}
                         {/if}
                     </div>
                 </div>
