--- a/app/Components/Controls/Stalking/Payment.latte
+++ b/app/Components/Controls/Stalking/Payment.latte
@@ -6,12 +6,14 @@
                 <li class="list-group-item">
                         <span class="row">
                             {var $model = \FKSDB\ORM\ModelPayment::createFromTableRow($row)}
-                            <span class="col-3">
+                            <span class="col-6">
                                 <a href="{plink :Event:Payment:Detail eventId=>$model->event_id,id=>$model->payment_id}">#{$model->getPaymentId()}</a>
                             </span>
-                            <span class="col-3">{$model->getPrice()->__toString()}</span>
-                            <span class="col-3">{control eventLabel $model->getEvent()}</span>
-                            <span class="col-3">
+                            <span class="col-6">{control eventLabel $model->getEvent()}</span>
+                        </span>
+                    <span class="row">
+                             <span class="col-6">{$model->getPrice()->__toString()}</span>
+                            <span class="col-6">
                             <span class="{$model->getUIClass()}">{$model->getStateLabel()}</span>
                         </span>
                     </span>
