--- a/app/OrgModule/templates/Stalking/view.latte
+++ b/app/OrgModule/templates/Stalking/view.latte
@@ -2,6 +2,10 @@
     <div class="card-columns mt-3">
         {control baseInfo}
 
+        {control contactInfo}
+
+        {control academicDegree}
+
         {control login}
 
         {control flag}
